--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-svg": "^13.0.5",
+    "recharts": "^2.0.9",
     "recoil": "^0.3.0",
     "web-vitals": "^1.0.1"
   },
